[tool.poetry]
name = "use-loguru"
version = "0.1.0"
description = ""
authors = ["shubham Mandowara <shubham77mandowara@gmail.com>"]
readme = "README.md"
packages = [{include = "use_loguru"}]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
